# twisteRL

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  crate.yaml  test.yaml  tests.yml  wheels.yaml
examples/: ppo_puzzle15_v1.json  ppo_puzzle15_v1.pt  ppo_puzzle8_v1.json  ppo_puzzle8_v1.pt  puzzle.ipynb
rust/: Cargo.toml  README.md
rust/src/: lib.rs  macros.rs
rust/src/collector/: az.rs  collector.rs  mod.rs  ppo.rs
rust/src/envs/: mod.rs  puzzle.rs  pyenv.rs
rust/src/nn/: layers.rs  mod.rs  modules.rs  policy.rs
rust/src/python_interface/: collector.rs  env.rs  error_mapping.rs  layers.rs  mod.rs  modules.rs  policy.rs  pyenv.rs  python_bindings.rs
rust/src/rl/: az.rs  env.rs  evaluate.rs  mod.rs  ppo.rs  search.rs  solve.rs  tree.rs
src/twisterl/: __init__.py  defaults.py  train.py  utils.py
src/twisterl/envs/: __init__.py
src/twisterl/nn/: __init__.py  policy.py  utils.py
src/twisterl/rl/: __init__.py  algorithm.py  az.py  ppo.py
tests/: test_all.py  test_utils.py
