[package]
name = "twisterl"
version = "0.1.0"
edition = "2021"
description = "Reinforcement learning primitives and a Python extension for high performance training and inference."
license = "Apache-2.0"

[features]
python_bindings = ["pyo3"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "multiple-pymethods"], optional = true }
nalgebra = "0.33.0"
rand = "0.8.4"
rayon = "1.1.0"
petgraph = "0.6.5"
dyn-clone = "1.0.19"
anyhow = "1.0.98"

[profile.release]
opt-level = 3
lto = 'fat'
